renamed courses app for categories

--- a/categories/templates/categories/home.html
+++ b/categories/templates/categories/home.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     {% if user|has_role:'system_admin' %}
-                <h3>{% trans 'Courses' %}</h3>
+                <h3>{% trans 'categories' %}</h3>
                 <div id="timeline">
                     {% include page_template %}
                 </div>
