added more tests on views and made the createCategory form visible but still not functional

--- a/categories/templates/categories/create.html
+++ b/categories/templates/categories/create.html
@@ -1,10 +1,10 @@
-{% extends 'course/index.html' %}
+{% extends 'categories/home.html' %}
 
 {% load widget_tweaks static i18n permission_tags django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
   {{ block.super }}
-  {% breadcrumb 'Create Course' 'course:create' %}
+  {% breadcrumb 'Create Category' 'categories:create' %}
 {% endblock %}
 
 {% block content %}
