--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -105,16 +105,22 @@
                       </ul>
                     </li> -->
                     <li title data-original-title="{% trans 'settings' %}">
-                        <a href=""  data-toggle="dropdown"><i class="fa fa-cog" aria-hidden="true"></i></a> 
+                        <a href="" data-toggle="dropdown"><i class="fa fa-cog" aria-hidden="true"></i></a> 
                         <ul class="dropdown-menu pull-right">
                             <li><a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
                             <li><a href="#">{% trans 'Manage Courses' %}</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="{% url 'users:profile' %}" style="padding-top: 15px;padding-bottom:15px;">
+                    <li title data-original-title="{% trans 'account' %}">
+                        <a href="" data-toggle="dropdown" style="padding-top: 15px;padding-bottom:15px;">
                             <img src="{{ user.image_url }}" style="width:30px;height:30px" />
                         </a>
+                        <ul class="dropdown-menu pull-right">
+                            <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                            <li><a href="{% url 'users:edit_profile' %}">{% trans 'Edit Profile' %}</a></li>
+                            <li><a href="#">{% trans 'Change Password' %}</a></li>
+                            <li><a href="#">{% trans 'Delete Account' %}</a></li>
+                        </ul>
                     </li>
                     <li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out">
                         <a href="{% url 'users:logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
