--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -11,7 +11,7 @@
 	<div class="card">
 		<div class="card-content">
 			<div class="card-body">
-				{% include 'users/_form.html' %}
+				{% include 'users/_form.html' with back_url="users:manage" %}
 			</div>
 		</div>
   	</div>
