--- a/users/templates/users/_form.html
+++ b/users/templates/users/_form.html
@@ -7,7 +7,7 @@
 		<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
 			{% if field.auto_id == 'id_image' %}
         		{% if field.field.required %}
-					<label for="{{ field.auto_id }}">{{ field.label }}<span>*</span></label>
+					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
 				{% else %}
 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
 				{% endif %}
@@ -22,7 +22,7 @@
                 </div>
             {% elif field.auto_id == 'id_description' %}
             	{% if field.field.required %}
-					<label for="{{ field.auto_id }}">{{ field.label }}<span>*</span></label>
+					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
 				{% else %}
 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
 				{% endif %}
@@ -35,7 +35,7 @@
 				</div>
 			{% else %}
 				{% if field.field.required %}
-					<label for="{{ field.auto_id }}">{{ field.label }}<span>*</span></label>
+					<label for="{{ field.auto_id }}">{{ field.label }} <span>*</span></label>
 				{% else %}
 					<label for="{{ field.auto_id }}">{{ field.label }}</label>
 				{% endif %}
@@ -56,7 +56,12 @@
 			{% endif %}
 		</div>
 	{% endfor %}
-	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 text-center">
-		<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
+	<div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+		<div class="pull-left">
+			<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-primary" />
+		</div>
+		<div class="pull-right">
+			<a href="{% url back_url %}" class="btn btn-raised btn-default">{% trans 'Cancel' %}</a>
+		</div>
 	</div>
 </form>
