--- a/users/templates/users/change_password.html
+++ b/users/templates/users/change_password.html
@@ -5,53 +5,16 @@
 {% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-
-  {{ block.super }}
-  {% breadcrumb 'Edit' 'users:update_profile' %}
-
+    {{ block.super }}
+    {% breadcrumb 'Change Password' 'users:change_pass' %}
 {% endblock %}
 
 {% block content %}
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert alert-success alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <p>{{ message }}</p>
+    <div class="card">
+        <div class="card-content">
+            <div class="card-body">
+                {% include "users/_form.html" with back_url="users:profile" %}
             </div>
-        {% endfor %}
-    {% endif %}
-    <div class="row">
-     <div class="col-md-12">
-      <div class="well well-lg">
-       <form method="post" action="" enctype="multipart/form-data">
-           {% csrf_token %}
-           <div class="form-group">
-             <label class="control-label" for="focusedInput1">{% trans 'Current Password' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
-           </div>
-           <div class="form-group">
-             <label class="control-label" for="focusedInput1">{% trans 'New Password' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
-           </div>
-           <div class="form-group">
-             <label class="control-label" for="focusedInput1">{% trans 'Confirmation' %}</label>
-             <input type="password" class="form-control" id="inputPassword" placeholder="{% trans 'Password' %}">
-           </div>
-           <div class="row">
-            <div class="col-md-3 col-sm-2 col-xs-2">
-                <input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-block btn-success" />
-            </div>
-            <div class="col-md-3 col-sm-2 col-xs-2">
-                <a href="{% url 'users:profile' %}" class="btn btn-raised btn-block btn-default" >{% trans 'Cancel' %}</a>
-            </div>
-           </div>
-        </form>
-      </div>
-     </div>
+        </div>
     </div>
-
-
-    <br clear="all" />
 {% endblock %}
