--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -12,62 +12,13 @@
 
 
 {% block content %}
-	{% if messages %}
-		{% for message in messages %}
-			<div class="alert alert-success alert-dismissible" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<p>{{ message }}</p>
-			</div>
-		{% endfor %}
-	{% endif %}
-	<div class="card mg-b-5m">
-		<div class="card-content">
-			<div class="card-body">
-				<form method="post" action="" enctype="multipart/form-data">
-					{% csrf_token %}
-					{% for field in form %}
-						<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
-							<label for="{{ field.auto_id }}">{{ field.label }}</label>
-							{% if field.auto_id == 'id_image' %}
-								{% render_field field class='form-control input-sm' %}
-								<div class="input-group">
-				                    <input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your file...' %}">
-				                    <span class="input-group-btn input-group-sm">
-				                        <button type="button" class="btn btn-fab btn-fab-mini">
-				                          	<i class="material-icons">attach_file</i>
-				                        </button>
-				                    </span>
-				                </div>
-				            {% elif field.auto_id == 'id_description' %}
-				            	{% render_field field class='form-control text_wysiwyg' %}
-							{% else %}
-								{% render_field field class='form-control' %}
-								<span id="helpBlock" class="help-block">{{ field.help_text }}</span>
-							{% endif %}
-							{% if field.errors %}
-								<div class="alert alert-danger alert-dismissible" role="alert">
-				  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-				  						<span aria-hidden="true">&times;</span>
-			  						</button>
-									<ul>
-										{% for error in field.errors %}
-											<li>{{ error }}</li>
-										{% endfor %}
-									</ul>
-								</div>
-							{% endif %}
-						</div>
-					{% endfor %}
-					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
-						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" />
-					</div>
-					<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
-						<a href="{% url 'users:profile' %}" class="btn btn-raised btn-default" >{% trans 'Cancel' %}</a>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>	
+	<div class="card">
+        <div class="card-content">
+            <div class="card-body">
+                {% include "users/_form.html" with back_url="users:profile" %}
+            </div>
+        </div>
+    </div>
+    <br clear="all" />
+    <br clear="all" />
 {% endblock %}
