--- a/categories/templates/categories/home.html
+++ b/categories/templates/categories/home.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumbs %}
   {% clear_breadcrumbs %}
-  {% breadcrumb 'Home' 'app:index' %}
+  {% breadcrumb 'Home' 'categories:index' %}
 {% endblock %}
 
 
