--- a/categories/templates/categories/home_admin_content.html
+++ b/categories/templates/categories/home_admin_content.html
@@ -1,8 +1,8 @@
 {% load  static i18n %}
 
-{% for course in objects %}
+{% for category in categories %}
     <div class="panel panel-default courseHome">
-        <br><h4>{{ course }}</h4>
+        <br><h4>{{ category }}</h4>
       	<a href="#" class="btn btn-outline-info">{% trans 'Edit' %}</a>
     </div>
 {% endfor %}
