Adding remove user/account

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -119,7 +119,7 @@
                             <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
                             <li><a href="{% url 'users:edit_profile' %}">{% trans 'Edit Profile' %}</a></li>
                             <li><a href="{% url 'users:change_pass' %}">{% trans 'Change Password' %}</a></li>
-                            <li><a href="#">{% trans 'Delete Account' %}</a></li>
+                            <li><a href="{% url 'users:remove_acc' %}">{% trans 'Delete Account' %}</a></li>
                         </ul>
                     </li>
                     <li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out">
