--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,7 +16,7 @@
 {% block content %}
 	{% if messages %}
 		{% for message in messages %}
-			<div class="alert alert-success alert-dismissible" role="alert">
+			<div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
 				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
