Adding password recovering

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -65,7 +65,7 @@
         </div>
         <div class="row">
           <div class="col-md-offset-1 col-md-10 text-right forgotPassword">
-            <a href="#">{% trans 'Forgot your password?' %}</a>
+            <a href="{% url 'users:forgot_pass' %}">{% trans 'Forgot your password?' %}</a>
           </div>
         </div>
       </div>
