--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -108,7 +108,7 @@
                         <a href="" data-toggle="dropdown"><i class="fa fa-cog" aria-hidden="true"></i></a> 
                         <ul class="dropdown-menu pull-right">
                             <li><a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
-                            <li><a href="#">{% trans 'Manage Courses' %}</a></li>
+                            <li><a href="{% url 'categories:index' %}">{% trans 'Manage Courses' %}</a></li>
                         </ul>
                     </li>
                     <li title data-original-title="{% trans 'account' %}">
