--- a/categories/templates/categories/create.html
+++ b/categories/templates/categories/create.html
@@ -47,7 +47,7 @@
 				</div>
 			{% endfor %}
 			<div class="row text-center">
-					<input type="submit" value="{% trans 'Create' %}" class="btn btn-primary btn-raised" />
+					<input type="submit" value="{% trans 'Register' %}" class="btn btn-primary btn-raised" />
 			</div>
       	</form>
 	</div>
