--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -37,16 +37,21 @@
               <a  class="category-course-link" data-toggle="collapse" href="#{{category.slug}}">{{category.name}}</a>
             </h4>
 
-            {% if user|has_role:'sys_admin' %}
-               <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+            {% if user.is_staff %}
+               <div class="col-xs-6 col-md-6 divMoreActions" >
+                <div class="btn-group">
+                  <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                   </button>
+                  <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
                     <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
                     <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
-                    <li><a href="#"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
+                    <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                   </ul>
+                </div>
+            </div>
               
-            {% endif %}
-
-            {% if user|has_role:'student' %}
+            {% else %}
                <a href=""><i class="fa fa-list" aria-hidden="true"></i></a>
               <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
 
