--- a/amadeus/templates/recover_pass_email_template.html
+++ b/amadeus/templates/recover_pass_email_template.html
@@ -1,15 +1,6 @@
-{% extends 'base.html' %}
 
 {% load i18n %}
 
-{% block nav %}
-{% endblock %}
-
-{% block breadcrumbs %}
-{% endblock %}
-
-{% block sidebar %}
-{% endblock sidebar %}
 
 {% autoescape off %}
 
@@ -18,8 +9,7 @@
 {% trans "Please go to the following page and choose a new password:" %}
 
 {% block reset_link %}
-    {{ domain }}{% url 'users:reset_password_confirm' uidb64=uid token=token %} 
-    <!--This is the only change from ` django/contrib/admin/templates/registration/password_reset_subject.html`. the url name is commented out in urls.py section. The view associated with the url is going to described later in this post. -->
+    {{ domain }}    
 {% endblock %}
 
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
