--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -109,6 +109,11 @@
                         <ul class="dropdown-menu pull-right">
                             <li><a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
                             <li><a href="{% url 'categories:index' %}">{% trans 'Manage Courses' %}</a></li>
+                            <li><a href="{% url 'categories:index' %}">{% trans 'System' %}</a></li>
+                            <div id="horizontal-line"></div>
+                            <li><a href="{% url 'categories:index' %}">{% trans 'Mail Sender' %}</a></li>
+                            <li><a href="{% url 'categories:index' %}">{% trans 'Security' %}</a></li>
+                            <li><a href="{% url 'categories:index' %}">{% trans 'Theme' %}</a></li>
                         </ul>
                     </li>
                     <li title data-original-title="{% trans 'account' %}">
