--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -46,7 +46,7 @@
                     <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
                    </button>
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                    <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
                     <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
                     <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                   </ul>
