added right tooltip on sidebar menu, fixed margin outside them

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -9,7 +9,7 @@
     background-color: #26A69A;
     color: white;
     width: 80%;
-    margin-bottom: 3%;
+    margin: 10px;
     text-align: center;
 }
 
