fixed breadcrumbs past links and category card is now updated and listing coordinators horizontally

--- a/categories/templates/categories/category_card.html
+++ b/categories/templates/categories/category_card.html
@@ -1,5 +1,5 @@
 {% load static i18n permission_tags %}
-<div class="group  course-card " id="course_{{course.slug}}">
+<div class="group  course-card " id="category_{{category.slug}}">
     <div class="panel panel-info">
         <div class="panel-heading course">
           <div class="row">
