--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -49,6 +49,10 @@
   font-size: 15px;
 }
 
+.category-panel-content{
+  padding:10px;
+}
+
 /* category app ends */
 
 .clearfix{
@@ -103,7 +107,12 @@
     margin: 10% 10% 5% 5%;
 }
 .breadcrumb{
+    font-size: 16px;
     margin-bottom: 25px;
+}
+
+.breadcrumb > li > a{
+  color: #26A69A;
 }
 .courseHome{
     text-align: center;
