--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -26,12 +26,14 @@
 {% if user.is_staff %}
   <a href="{% url 'categories:create' %}"><button id="create-category"> {% trans "Create Category" %}</button></a>
 
-{% else %}
-  <ul>
+{% endif %}
+
+<div class="col-md-12">
+  <ul class="core-subjects-options">
     <li>{% trans "My subjects" %}</li>
     <li>{% trans "all subjects" %}</li>
   </ul>
-{% endif %}
+</div>
 
 <!-- Code for listing categories -->
 <div class="col-md-12 cards-content">
@@ -55,7 +57,10 @@
                     <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
                    </button>
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-                    <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                    {% if user.is_staff %}
+                         <li><a href="{% url 'categories:replicate' category.slug %}"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
+                    {% endif %}
+                   
                     <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
                     <li><a href="javascript:delete_course.get('{% url 'categories:delete' category.slug %}?view=index','#category','#modal_course')"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp;{% trans 'Remove' %}</a></li>
                   </ul>
@@ -82,16 +87,16 @@
       </div>
     
         
-      {% if user.is_staff %}
+      
         <div id="{{category.slug}}" class="panel-collapse collapse category-panel-content">
              <h4>  {% trans "Coordinator(s): " %}
             {% for coordinator in category.coordinators.all %}
               {{coordinator.username}}
             {% endfor %}
             </h4>
-              <p> {{category.description}}</p>
+             {{category.description|safe}}
         </div>
-      {% endif %}
+     
       {% comment %}
         
       
