--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -72,12 +72,28 @@
     height: 50px;
 }
 
-.navbar .logo {position: absolute; top: 8px; text-align: center; height: 32px; width: 32px;}
+.navbar-brand {
+    height: 50px !important;
+}
+.navbar-brand:hover {
+    background: #00695C !important;
+}
+
+.navbar .logo {
+    text-align: center; 
+    margin-top: -6px;
+    height: 32px; 
+    width: 32px;
+}
 
 .navbar-nav li > a {
     font-size: 28px;
     padding-top: 12px !important;
     padding-left: 20px;
+    max-height: 50px;
+}
+.navbar-nav li > a:hover {
+    background: #00695C !important;
 }
 
 .top-search {
@@ -94,6 +110,14 @@
 }
 .top-search:-moz-placeholder {
     font-style: italic;
+}
+
+#btn-search {
+    margin-top: -6px;
+    height: 50px;
+}
+#btn-search:hover {
+    background: #00695C;    
 }
 /* End NavBar Top */
 
