--- a/categories/templates/categories/list.html
+++ b/categories/templates/categories/list.html
@@ -28,9 +28,9 @@
 
 {% endif %}
 
-<div class="col-md-12">
+<div id="core-subjects-options-div">
   <ul class="core-subjects-options">
-    <li>{% trans "My subjects" %}</li>
+    <li class="active">{% trans "My subjects" %}</li>
     <li>{% trans "all subjects" %}</li>
   </ul>
 </div>
