--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -53,8 +53,28 @@
   padding:10px;
 }
 
+.core-subjects-options{
+  padding: 0px;
+}
+
+#core-subjects-options-div{
+      width: 100%;
+    margin-bottom: 2%;
+    height: 30px;
+}
+
 .core-subjects-options > li{
   float:left;
+  padding: 10px;
+  background-color: #FFFFFF;
+  margin: 1px;
+ 
+    border-bottom: 4px;
+    border-bottom-style: solid;
+}
+
+.core-subjects-options > li.active{
+  border-bottom-color: green;
 }
 
 /* category app ends */
@@ -112,7 +132,7 @@
 }
 .breadcrumb{
     font-size: 16px;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
 }
 
 .breadcrumb > li > a{
