--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -138,7 +138,7 @@
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
                 {% block sidebar %}
                    <ul id="sidebar-menu">
-                       <li class="item"  data-toggle="tooltip" data-placement="right" title="{% trans "My Subjects" %}">
+                       <li class="item"  data-toggle="tooltip" data-placement="right" title="{% trans "Subjects" %}">
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                        </li>
                        <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Timeline" %}">
