modified delete category card

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -93,6 +93,14 @@
   border-bottom-color: green;
 }
 
+#delete-category-footer{
+  border-top:none !important;
+}
+
+.erase-button{
+  float:left;
+}
+
 /* category app ends */
 
 .clearfix{
