--- a/categories/templates/categories/category_card.html
+++ b/categories/templates/categories/category_card.html
@@ -13,7 +13,7 @@
                 <div class="btn-group">
                   <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                   </button>
+                  </button>
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
                     <li><a href="#"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>{% trans 'Replicate' %}</a></li>
                     <li><a href="#"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>{% trans 'Edit' %}</a></li>
@@ -23,7 +23,9 @@
             </div>
             {% elif user|has_role:'student' %}
               {% if not request.user in course.students.all %}
-                <a onclick="subscribe($(this), '', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')"><button class="btn btn-sm btn-primary btn-raised pull-right">{% trans 'Subscribe' %}</button></a>
+                <a onclick="subscribe($(this), '', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')">
+                  <button class="btn btn-sm btn-primary btn-raised pull-right">{% trans 'Subscribe' %}</button>
+                </a>
               {% endif %}
             {% endif %}
           </div>
