--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -88,6 +88,9 @@
                     </form>
                 </div>
                 <ul class="nav navbar-nav navbar-right notifications">
+                    {% if user.is_staff %}
+                        
+                   
                     <li class="dropdown-accordion dropdown" data-accordion="#system_accordion" title data-original-title="{% trans 'settings' %}">
                         <a href="#" data-toggle="dropdown"><i class="fa fa-cog" aria-hidden="true"></i></a> 
                         <ul class="dropdown-menu pull-right" role="menu">
@@ -115,6 +118,7 @@
                             </li>
                         </ul>
                     </li>
+                     {% endif %}
                     <li title data-original-title="{% trans 'account' %}">
                         <a href="" data-toggle="dropdown" style="padding-top: 15px;padding-bottom:15px;">
                             <img src="{{ user.image_url }}" style="width:30px;height:30px" />
